tests/purs/passing/Import.purs
module Main where

import M2
import Effect.Console (log)

main = log "Done"
