tests/purs/failing/ModuleNameUnderscoreEnd.purs
-- @shouldFailWith ErrorParsingModule
module ModuleNameEndsWithUnderscore_ where

import Effect.Console (log)

main = log "Done"
